Fix LocalFileSystemFetcher handling of hidden paths (#2895)